--- a/app/core/static/css/index.css
+++ b/app/core/static/css/index.css
@@ -171,4 +171,10 @@ button {
   justify-content: center;
   margin-bottom: 10px;
   margin-top: 30px;
+}
+@media screen and (max-width: 550px) {
+  .detalle_reserva img {
+    width: 90%;
+    height: auto;
+  }
 }/*# sourceMappingURL=index.css.map */
